Avoid using deprecated constructors on value-based types